PinApp-Challenge/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: PinApp-Challenge
spec:
  selector:
    app: PinAppChallenge
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
