PinApp-Challenge/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: PinApp-Challenge
spec:
  rules:
    - host: clientes.pinapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: PinApp-Challenge
                port:
                  number: 8080
